// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultsLayout renders basic header styles properly 1`] = `
@media (min-width: 64em) {

}

@media (max-width: 768px) {

}

<head>
  <style
    data-styled="active"
    data-styled-version="6.1.19"
  >
    .RTYuM{color:#C000FE!important;}
    .gIWNEz{background-color:#4a402b;}
    .gIWNEz .usa-logo .usa-logo__text{font-family:"Public Sans Web"!important;}
    .gIWNEz .usa-nav__primary,.gIWNEz .usa-nav__secondary-links{font-family:"Georgia","Cambria","Times New Roman","Times",serif;}
    .gIWNEz a.usa-nav__link{color:#594973;}
    .gIWNEz .usa-nav__secondary-item&gt;a{color:#c8155d;}
    .gIWNEz button.usa-menu-btn{background-color:#cfcd03;}
    .gIWNEz button.usa-menu-btn:hover{background-color:#9d9b02;}
    .bucNov .usa-banner__header,.bucNov .usa-banner__button-text{background-color:#643617;color:#dacb1b;}
    .bucNov .usa-banner__button::after,.bucNov .usa-banner__button[aria-expanded=true]:hover::after{background-color:#dacb1b;}
    .jhKtfk li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a{color:#aea9f7;font-family:"Public Sans Web";}
    .jhKtfk .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=false]{color:#aea9f7;}
    .jhKtfk li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a::after{background-color:#aea9f7!important;}
    .jhKtfk .usa-nav__primary&gt;.usa-nav__primary-item .usa-nav__link:hover::after{background-color:#aea9f7!important;}
    .jhKtfk .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=true]{background-color:#aea9f7!important;}
    .jhKtfk .vertical-wrapper .usa-nav__submenu{background-color:#aea9f7!important;}
    .jhKtfk li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a.usa-current{color:#1f1748!important;}
    .jhKtfk li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a.usa-current::after{background-color:#1f1748!important;}
    .icSQub{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;}
    .icSQub .result-title-label&gt;.result-title-link{color:#33f0aa;}
    .icSQub .result-title-label&gt;.result-title-link:visited{color:#4a97ad;}
    .icSQub .result-desc&gt;p{color:#2bd4c7;}
    .icSQub .result-desc .result-url-text{color:#475830;}
    .icSQub .result-desc .result-url-text{color:#475830;}
    .icSQub .filter-tags-wrapper .filter-tag{color:#33f0aa;}
    .iSpoww{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;background-color:#761816;}
    .iSpoww .usa-footer__return-to-top&gt;a,.iSpoww a.usa-footer__primary-link{color:#46f966;}
    .iSpoww .usa-footer .usa-footer__primary-section{background-color:#5fcfc5;}
    .bRItuQ{background-color:#be1c21;font-family:"Public Sans Web"!important;}
    .bRItuQ .usa-identifier__container,.bRItuQ .usa-identifier__container&gt;a,.bRItuQ .usa-identifier__identity-disclaimer,.bRItuQ .usa-identifier__identity-disclaimer&gt;a{color:#f48a4c;}
    .bRItuQ .usa-identifier__required-link,.bRItuQ .usa-identifier__identity-domain{color:#5d5a6f;}
    .bRItuQ .usa-identifier__required-link:hover,.bRItuQ .usa-identifier__required-link:active,.bRItuQ .usa-identifier__required-link:visited{color:#5d5a6f;}
    .bRItuQ .usa-link{color:#005EA2!important;}
    .bRItuQ .usa-link:hover,.bRItuQ .usa-link:active,.bRItuQ .usa-link:visited{color:#005EA2!important;}
    @media (min-width: 64em){.usa-header--extended .usa-navbar,.usa-header--extended .usa-nav__inner,.usa-banner__inner{max-width:64rem;}}
    .serp-result-wrapper&gt;.grid-container{max-width:54rem;}
    .serp-result-wrapper{background-color:#761816;}
    .usa-button{background-color:#cfcd03;}
    .usa-button:hover{background-color:#9d9b02;}
    .usa-search .usa-button{background-color:#cfcd03;}
    .usa-search .usa-button:hover{background-color:#9d9b02;}
    @media (max-width: 768px){.serp-facets-container{display:block;}.serp-main-container{width:100%;}}
    .facets-close-icon-wrapper{background-color:#cfcd03;}
  </style>
</head>
`;

exports[`SearchResultsLayout renders extended header styles properly 1`] = `
@media (max-width: 63.99em) {

}

@media (min-width: 64em) {

}

@media (max-width: 768px) {

}

<head>
  <style
    data-styled="active"
    data-styled-version="6.1.19"
  >
    .RTYuM{color:#C000FE!important;}
    .iwzfgU{background-color:#4a402b;}
    .iwzfgU .usa-logo .usa-logo__text{font-family:"Public Sans Web"!important;}
    .iwzfgU .usa-nav__primary a{font-family:"Public Sans Web"!important;font-weight:bold!important;}
    .iwzfgU .usa-nav__secondary{font-family:"Georgia","Cambria","Times New Roman","Times",serif;}
    .iwzfgU .usa-nav{background-color:#83df0a;}
    .iwzfgU a.usa-nav__link{color:#594973!important;}
    .iwzfgU a.usa-nav__link:hover::after{background-color:#594973!important;}
    .iwzfgU .usa-nav__secondary-item&gt;a{color:#c8155d;}
    @media (max-width: 63.99em){.iwzfgU .usa-nav__secondary-item&gt;a{color:#594973;}}
    .iwzfgU button.usa-menu-btn{background-color:#cfcd03;}
    .iwzfgU button.usa-menu-btn:hover{background-color:#9d9b02;}
    .bucNov .usa-banner__header,.bucNov .usa-banner__button-text{background-color:#643617;color:#dacb1b;}
    .bucNov .usa-banner__button::after,.bucNov .usa-banner__button[aria-expanded=true]:hover::after{background-color:#dacb1b;}
    .jhKtfk li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a{color:#aea9f7;font-family:"Public Sans Web";}
    .jhKtfk .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=false]{color:#aea9f7;}
    .jhKtfk li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a::after{background-color:#aea9f7!important;}
    .jhKtfk .usa-nav__primary&gt;.usa-nav__primary-item .usa-nav__link:hover::after{background-color:#aea9f7!important;}
    .jhKtfk .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=true]{background-color:#aea9f7!important;}
    .jhKtfk .vertical-wrapper .usa-nav__submenu{background-color:#aea9f7!important;}
    .jhKtfk li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a.usa-current{color:#1f1748!important;}
    .jhKtfk li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a.usa-current::after{background-color:#1f1748!important;}
    .icSQub{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;}
    .icSQub .result-title-label&gt;.result-title-link{color:#33f0aa;}
    .icSQub .result-title-label&gt;.result-title-link:visited{color:#4a97ad;}
    .icSQub .result-desc&gt;p{color:#2bd4c7;}
    .icSQub .result-desc .result-url-text{color:#475830;}
    .icSQub .result-desc .result-url-text{color:#475830;}
    .icSQub .filter-tags-wrapper .filter-tag{color:#33f0aa;}
    .iSpoww{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;background-color:#761816;}
    .iSpoww .usa-footer__return-to-top&gt;a,.iSpoww a.usa-footer__primary-link{color:#46f966;}
    .iSpoww .usa-footer .usa-footer__primary-section{background-color:#5fcfc5;}
    .bRItuQ{background-color:#be1c21;font-family:"Public Sans Web"!important;}
    .bRItuQ .usa-identifier__container,.bRItuQ .usa-identifier__container&gt;a,.bRItuQ .usa-identifier__identity-disclaimer,.bRItuQ .usa-identifier__identity-disclaimer&gt;a{color:#f48a4c;}
    .bRItuQ .usa-identifier__required-link,.bRItuQ .usa-identifier__identity-domain{color:#5d5a6f;}
    .bRItuQ .usa-identifier__required-link:hover,.bRItuQ .usa-identifier__required-link:active,.bRItuQ .usa-identifier__required-link:visited{color:#5d5a6f;}
    .bRItuQ .usa-link{color:#005EA2!important;}
    .bRItuQ .usa-link:hover,.bRItuQ .usa-link:active,.bRItuQ .usa-link:visited{color:#005EA2!important;}
    @media (min-width: 64em){.usa-header--extended .usa-navbar,.usa-header--extended .usa-nav__inner,.usa-banner__inner{max-width:64rem;}}
    .serp-result-wrapper&gt;.grid-container{max-width:54rem;}
    .serp-result-wrapper{background-color:#761816;}
    .usa-button{background-color:#cfcd03;}
    .usa-button:hover{background-color:#9d9b02;}
    .usa-search .usa-button{background-color:#cfcd03;}
    .usa-search .usa-button:hover{background-color:#9d9b02;}
    @media (max-width: 768px){.serp-facets-container{display:block;}.serp-main-container{width:100%;}}
    .facets-close-icon-wrapper{background-color:#cfcd03;}
  </style>
</head>
`;

exports[`SearchResultsLayout renders search with results styles properly 1`] = `
@media (max-width: 63.99em) {

}

@media (min-width: 64em) {

}

@media (max-width: 768px) {

}

<head>
  <style
    data-styled="active"
    data-styled-version="6.1.19"
  >
    .RTYuM{color:#C000FE!important;}
    .iwzfgU{background-color:#4a402b;}
    .iwzfgU .usa-logo .usa-logo__text{font-family:"Public Sans Web"!important;}
    .iwzfgU .usa-nav__primary a{font-family:"Public Sans Web"!important;font-weight:bold!important;}
    .iwzfgU .usa-nav__secondary{font-family:"Georgia","Cambria","Times New Roman","Times",serif;}
    .iwzfgU .usa-nav{background-color:#83df0a;}
    .iwzfgU a.usa-nav__link{color:#594973!important;}
    .iwzfgU a.usa-nav__link:hover::after{background-color:#594973!important;}
    .iwzfgU .usa-nav__secondary-item&gt;a{color:#c8155d;}
    @media (max-width: 63.99em){.iwzfgU .usa-nav__secondary-item&gt;a{color:#594973;}}
    .iwzfgU button.usa-menu-btn{background-color:#cfcd03;}
    .iwzfgU button.usa-menu-btn:hover{background-color:#9d9b02;}
    .bucNov .usa-banner__header,.bucNov .usa-banner__button-text{background-color:#643617;color:#dacb1b;}
    .bucNov .usa-banner__button::after,.bucNov .usa-banner__button[aria-expanded=true]:hover::after{background-color:#dacb1b;}
    .jhKtfk li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a{color:#aea9f7;font-family:"Public Sans Web";}
    .jhKtfk .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=false]{color:#aea9f7;}
    .jhKtfk li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a::after{background-color:#aea9f7!important;}
    .jhKtfk .usa-nav__primary&gt;.usa-nav__primary-item .usa-nav__link:hover::after{background-color:#aea9f7!important;}
    .jhKtfk .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=true]{background-color:#aea9f7!important;}
    .jhKtfk .vertical-wrapper .usa-nav__submenu{background-color:#aea9f7!important;}
    .jhKtfk li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a.usa-current{color:#1f1748!important;}
    .jhKtfk li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a.usa-current::after{background-color:#1f1748!important;}
    .icSQub{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;}
    .icSQub .result-title-label&gt;.result-title-link{color:#33f0aa;}
    .icSQub .result-title-label&gt;.result-title-link:visited{color:#4a97ad;}
    .icSQub .result-desc&gt;p{color:#2bd4c7;}
    .icSQub .result-desc .result-url-text{color:#475830;}
    .icSQub .result-desc .result-url-text{color:#475830;}
    .icSQub .filter-tags-wrapper .filter-tag{color:#33f0aa;}
    .iSpoww{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;background-color:#761816;}
    .iSpoww .usa-footer__return-to-top&gt;a,.iSpoww a.usa-footer__primary-link{color:#46f966;}
    .iSpoww .usa-footer .usa-footer__primary-section{background-color:#5fcfc5;}
    .bRItuQ{background-color:#be1c21;font-family:"Public Sans Web"!important;}
    .bRItuQ .usa-identifier__container,.bRItuQ .usa-identifier__container&gt;a,.bRItuQ .usa-identifier__identity-disclaimer,.bRItuQ .usa-identifier__identity-disclaimer&gt;a{color:#f48a4c;}
    .bRItuQ .usa-identifier__required-link,.bRItuQ .usa-identifier__identity-domain{color:#5d5a6f;}
    .bRItuQ .usa-identifier__required-link:hover,.bRItuQ .usa-identifier__required-link:active,.bRItuQ .usa-identifier__required-link:visited{color:#5d5a6f;}
    .bRItuQ .usa-link{color:#005EA2!important;}
    .bRItuQ .usa-link:hover,.bRItuQ .usa-link:active,.bRItuQ .usa-link:visited{color:#005EA2!important;}
    @media (min-width: 64em){.usa-header--extended .usa-navbar,.usa-header--extended .usa-nav__inner,.usa-banner__inner{max-width:64rem;}}
    .serp-result-wrapper&gt;.grid-container{max-width:54rem;}
    .serp-result-wrapper{background-color:#761816;}
    .usa-button{background-color:#cfcd03;}
    .usa-button:hover{background-color:#9d9b02;}
    .usa-search .usa-button{background-color:#cfcd03;}
    .usa-search .usa-button:hover{background-color:#9d9b02;}
    @media (max-width: 768px){.serp-facets-container{display:block;}.serp-main-container{width:100%;}}
    .facets-close-icon-wrapper{background-color:#cfcd03;}
  </style>
</head>
`;
